[package]
name = "actix-tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.0"
actix-web = "4"
tower = "0.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
