[package]
name = "aws-lambda-http-interop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.0"
#lambda_http = "0.5.1"
lambda_http = { git = "https://github.com/fmonniot/aws-lambda-rust-runtime", branch = "relax-send-constraint" }
actix-web = "4"
actix-service = "2"
actix-http = "3"
tower = "0.3"
serde = { version = "1", features = ["derive"] }
http = "0.2"
hyper = "0.14"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
serde_json = "1"
# Do not use openssl to simplify cross compiling examples
reqwest = { version = "0.11", default-features = false}
